Added "Forgot Password" Link validation